fix(viewer): removed line break in semi-dip occurrences under the entities tab.

--- a/frontend/assets/css/text-viewer2.scss
+++ b/frontend/assets/css/text-viewer2.scss
@@ -1621,3 +1621,9 @@ div.text-rendered {
     display: inline;
   }
 }
+
+div.text-rendered {
+  br {
+    display: none;
+  }
+}
